# vds

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.cargo/: config.toml
src/: generate.rs  lib.rs  serde.rs  vdchar.rs  vdstring.rs
tests/: proptest_serde.rs  proptest_vdchar.rs  proptest_vdgenerator.rs  proptest_vdstring.rs
